--- a/style.css
+++ b/style.css
@@ -46,12 +46,12 @@ body, html {
 }
 
 .finish {
-    background-image: linear-gradient(45deg, 
-    #451b24 25%, 
-    #892b32 0, 
-    #892B2F 50%, 
-    #451b24 0, 
-    #451b24 75%, 
+    background-image: linear-gradient(45deg,
+    #451b24 25%,
+    #892b32 0,
+    #892B2F 50%,
+    #451b24 0,
+    #451b24 75%,
     #892b32 0);
     background-size:15px 15px;
     width: 0%;
@@ -71,9 +71,11 @@ body, html {
 }
 
 .days-has-past {
+    opacity: 1;
     font-size: 80px;
 }
 
 .percent {
+    opacity: 1;
     font-size: 21px;
 }
