--- a/style.css
+++ b/style.css
@@ -13,7 +13,27 @@ body, html {
     background-repeat: repeat;
     background-size: contain;
     background-position: center;
+    flex-direction: column;
+}
 
+.refresh {
+    /* width: 10%; */
+    height: 50px;
+    line-height: 50px;
+    padding: 0 20px;
+    color: #333;
+    font-size: 20px;
+    font-weight: 900;
+    background-color: greenyellow;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    box-shadow: lightblue 2px 4px 10px;
+}
+
+.refresh:hover {
+    cursor: pointer;
+    background-color: rgb(91, 201, 238);
+    color: white;
 }
 
 .wraper {
@@ -22,14 +42,14 @@ body, html {
     justify-content: center;
     flex-direction: column;
     background-color: rgba(0, 0, 0, .5);
-    width: 100%;
+    width: 80%;
     margin: 0 30px;
     padding: 20px;
 }
 
 .title {
     text-align: center;
-    font-size: 50px;
+    font-size: 6vw;
     padding: 10px;
     margin-bottom: 30px;
     font-weight: bolder;
