--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ body, html {
     padding: 0;
     color: rosybrown;
     font-family: 'Noto Sans SC', sans-serif;
+    height: 100%;
 }
 .container {
-    min-height: 100vh;
+    min-height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
