--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body, html {
     padding: 0;
     color: rosybrown;
     font-family: 'Noto Sans SC', sans-serif;
-    height: 100%;
+    /* height: 100%; */
 }
 .container {
-    min-height: 100%;
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     display: flex;
     align-items: center;
     justify-content: center;
