--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -8,7 +8,7 @@ body, html {
     /* height: 100%; */
 }
 .container {
-    height: calc(100vh-50px);
+    height: calc(100vh - 50px);
     height: calc((var(--vh, 1vh) * 100) - 50px);
     display: flex;
     align-items: center;
